--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,23 +1,20 @@
-<h1 id="all-merchants-header"> All Merchants </h1>
+<main class="main-container">
+  <h1 class="all-merchants-header"> All Merchants </h1>
 
-<table class="users-table">
-<% @merchants.each do |merchant| %>
-
-<tr>
-  <% if current_admin? %>
-    <td><%=link_to merchant.name, merchant_path(merchant), class: "merchant-link", id: "merchant-name"%></td>
-  <% else %>
-    <td><span id="merchant-name"> <%= merchant.name %> </span></td>
-  <% end %>
-
-<tr>
-  <% if merchant.status == 'active' && current_admin?%>
-    <td><%= link_to 'Disable', admin_user_path(merchant, status: 'disabled'), method: :patch, class: "status-link", id: "disable-link" %></td>
-  <% elsif  merchant.status == 'disabled' && current_admin? %>
-    <td><%= link_to 'Enable', admin_user_path(merchant, status: 'active'), method: :put, class: "status-link", id: "enable-link" %></td>
-  <% else %>
-  <% end %>
-</tr>
-
-<% end %>
-</table>
+  <table class="users-table">
+    <% @merchants.each do |merchant| %>
+      <tr>
+        <% if current_admin? %>
+          <td><span id="merchant-name"><%=link_to merchant.name, merchant_path(merchant), class: "merchant-link merchant-name"%></span></td>
+        <% else %>
+          <td><span class="merchant-name"> <%= merchant.name %> </span></td>
+        <% end %>
+        <% if merchant.status == 'active' && current_admin?%>
+          <td><%= link_to 'Disable', admin_user_path(merchant, status: 'disabled'), method: :patch, class: "status-link disable-link" %></td>
+        <% elsif  merchant.status == 'disabled' && current_admin? %>
+          <td><%= link_to 'Enable', admin_user_path(merchant, status: 'active'), method: :put, class: "status-link enable-link" %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </table>
+<main>
