Update partial and its views to both have new styles

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
-<h1> Edit Info </h1>
-
-<%= render partial: 'form' %> 
+<section class="user-info-form main-container">
+  <h2 class="page-title"> Edit Info </h2>
+  <%= render partial: 'form' %>
+</section>
