--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,4 @@
-
-<%= render partial: 'form' %>
+<section class="user-info-form main-container">
+  <h2 class="page-title"> Create Account </h2>
+  <%= render partial: 'form' %>
+</section>
