--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -9,7 +9,6 @@ input, select {
 }
 
 .info-box {
-  font-size: 2em;
   border-radius: 5px;
   padding: 10px;
   padding-top: 0px;
@@ -28,12 +27,12 @@ input, select {
   height: 35px;
   padding: 5px;
   border: silver inset 1px;
-  font-size: .7em;
+  font-size: 1.2em;
   width: 90%;
 }
 
 .info-box > label {
-  font-size: .7em;
+  font-size: 1.2em;
 }
 
 .sign-in-form {
@@ -41,11 +40,16 @@ input, select {
   max-width: 400px;
 }
 
-.register-form {
+.user-info-form {
   min-width: 500px;
   max-width: 600px;
   padding-left: 50px;
   padding-top: 20px;
+}
+
+.edit-form {
+  min-width: 500px;
+  max-width: 600px;
 }
 
 .login-button {
@@ -76,7 +80,8 @@ input, select {
 
 .address-info {
   display: flex;
-  width: 90%;
+  width: 85%;
+  padding-left: 20px;
 }
 
 .address-info > span {
