--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
   <div class="info-box your-info-box">
     <div> Role: <%= current_user.role %></div>
-    <div id="email-address"> Username: <%= current_user.email %> </div>
+    <div class="email-address"> Username: <%= current_user.email %> </div>
     <div>
       <span> Address: <%= current_user.address %>,&nbsp</span>
       <span> <%= current_user.city %>,&nbsp </span>
