--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,33 +1,31 @@
+<main class="main-container">
+  <h1>Items</h1>
+  <div>
+    <%= link_to "Add a new item", new_dashboard_item_path, class: "new-item-link"%>
+  </div>
+  <div id="dashboard-items-index">
+    <% @items.each do |item| %>
+      <div id="dashboard-item-<%=item.id%>-card">
+        <div class="item-info">ID: <%= item.id %></div>
+        <div class="item-info">Name: <%= item.name %></div>
+        <div class="item-info">Price: <%= number_to_currency(item.price) %></div>
+        <div class="item-info">Inventory: <%= item.inventory_count %></div>
+        <div class="item-info"><%= item.description %></div>
 
+        <% if item.status == 'active'%>
+          <div class="item-info">Status: <%= item.status %></div>
+          <div id="item-#{item.id}" ><%= link_to 'Disable', dashboard_item_path(item, status: 'disable'), method: :put, class: "status-link", id: "disable-link"%>
+          </div>
+        <% else %>
+          <div class="item-info">Status: <%= item.status %></div>
+          <div id="item-#{item.id}" >
+            <%= link_to 'Enable', dashboard_item_path(item, status: 'enable'), method: :put, class: "status-link", id: "enable-link" %>
+          </div>
+        <% end %>
 
-<h1>Items</h1>
-
-
-<div><%= link_to "Add a new item", new_dashboard_item_path, class: "new-item-link"%></div>
-
-<div id="dashboard-items-index">
-  <% @items.each do |item| %>
-    <div id="dashboard-item-<%=item.id%>-card">
-      <div class="item-info">ID: <%= item.id %></div>
-      <div class="item-info">Name: <%= item.name %></div>
-      <div class="item-info">Price: <%= number_to_currency(item.price) %></div>
-      <div class="item-info">Inventory: <%= item.inventory_count %></div>
-      <div class="item-info"><%= item.description %></div>
-
-      <% if item.status == 'active'%>
-        <div class="item-info">Status: <%= item.status %></div>
-        <div id="item-#{item.id}" ><%= link_to 'Disable', dashboard_item_path(item, status: 'disable'), method: :put, class: "status-link", id: "disable-link"%>
-        </div>
-      <% else %>
-        <div class="item-info">Status: <%= item.status %></div>
-        <div id="item-#{item.id}" >
-          <%= link_to 'Enable', dashboard_item_path(item, status: 'enable'), method: :put, class: "status-link", id: "enable-link" %>
-        </div>
-      <% end %>
-
-      <div><%= link_to "Edit this item", edit_item_path(item.id), class: "status-link", id: "edit-link"%></div>
-      <img src="<%= item.img_url %>" class="item-big-image" alt="dashboard-<%= item.name %>-image">
-    </div>
-  <% end %>
-
-</div>
+        <div><%= link_to "Edit this item", edit_item_path(item.id), class: "status-link", id: "edit-link"%></div>
+        <img src="<%= item.img_url %>" class="item-big-image" alt="dashboard-<%= item.name %>-image">
+      </div>
+    <% end %>
+  </div>
+</main>
