--- a/app/views/dashboard/items/new.html.erb
+++ b/app/views/dashboard/items/new.html.erb
@@ -1,38 +1,39 @@
-<h1>New Item</h1>
-
-<%= form_for [@user, @item], url: dashboard_items_path do |f|%>
-<% if @item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
-      <% @item.errors.full_messages.each do |message| %>
-        <div><%= message %></div>
-      <% end %>
+<section class="user-info-form main-container">
+  <h1>New Item</h1>
+  <%= form_for [@user, @item], url: dashboard_items_path do |f|%>
+    <% if @item.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@item.errors.count, "error") %>
+          prohibited this item from being saved:
+        </h2>
+        <% @item.errors.full_messages.each do |message| %>
+          <div><%= message %></div>
+        <% end %>
+      </div>
+    <% end %>
+    <div class="info-box">
+      <%= f.label :name %>
+      <%= f.text_field :name, id: "item-name-field", placeholder: "Item Name" %>
     </div>
+    <div class="info-box">
+      <div>
+        <%= f.label :price %>
+        <%= f.text_field :price, id: "item-price-field", placeholder: "Item Price" %>
+      </div>
+      <div>
+        <%= f.label :img_url %>
+        <%= f.text_field :img_url, id: "item-img-field", placeholder: "URL for item image"%>
+      </div>
+      <div>
+        <%= f.label :inventory_count %>
+        <%= f.text_field :inventory_count, id: "item-inventory-field", placeholder: "quantity in inventory"%>
+      </div>
+      <div>
+        <%= f.label :description %>
+        <%= f.text_area :description, id: "item-description-field", placeholder: "description of item" %>
+      </div>
+    </div>
+    <%= f.submit %>
   <% end %>
-
-  <div class="info-box">
-    <%= f.label :name %>
-    <%= f.text_field :name, id: "item-name-field", placeholder: "Item Name" %>
-  </div>
-
-  <div class="info-box">
-    <div>
-      <%= f.label :price %>
-      <%= f.text_field :price, id: "item-price-field", placeholder: "Item Price" %>
-    </div>
-    <div>
-      <%= f.label :img_url %>
-      <%= f.text_field :img_url, id: "item-img-field", placeholder: "URL for item image"%>
-    </div>
-    <div>
-      <%= f.label :inventory_count %>
-      <%= f.text_field :inventory_count, id: "item-inventory-field", placeholder: "quantity in inventory"%>
-    </div>
-    <div>
-      <%= f.label :description %>
-      <%= f.text_area :description, id: "item-description-field", placeholder: "description of item" %>
-    </div>
-  </div>
-
-  <%= f.submit %>
-<% end %>
+</section>
