--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,39 +1,40 @@
+<main class="main-container">
+  <h1>Items for Sale</h1>
+  <div class="grid-container" id="items-list">
+    <% @items.each do |item| %>
+      <div class="item-entry", id="item-entry-<%=item.id%>">
+        <%= link_to image_tag(item.img_url, border: 0, class: "item-thumbnail"), item_path(item) %>
+        <b>
+          <%= link_to item.name, item_path(item), class:"item-info", id:"item-name" %>
+        </b>
+        <div class="item-info" id="item-merchant-name">
+          <em><%= item.user.name %> </em>
+        </div>
+        <div class="item-info" id="item-count">
+          In Stock: <%= item.inventory_count %>
+        </div>
+        <div class="item-info" id="item-price">
+          <%= number_to_currency(item.price) %>
+        </div>
+        <br>
+        <div class="item-info" id="item-description"> <%= item.description %> </div>
 
-<h1>Items for Sale</h1>
-
-<div class="grid-container" id="items-list">
-
-  <% @items.each do |item| %>
-  <div class="item-entry", id="item-entry-<%=item.id%>">
-
-    <%= link_to image_tag(item.img_url, border: 0, class: "item-thumbnail"), item_path(item) %>
-
-    <b><%= link_to item.name, item_path(item), class:"item-info", id:"item-name" %></b>
-
-    <div class="item-info" id="item-merchant-name"> <em><%= item.user.name %> </em> </div>
-    <div class="item-info" id="item-count"> In Stock: <%= item.inventory_count %> </div>
-    <!--TODO: convert to currency -->
-    <div class="item-info" id="item-price"> <%= number_to_currency(item.price) %>  </div>
-    <br>
-    <div class="item-info" id="item-description"> <%= item.description %> </div>
-
-  </div>
-  <% end %>
-</div>
-
-
-<h2 id="leaderboard-title">Leaderboard</h2>
-<div id="stats-block">
-  <div class="item-info">Top Shoppers: <br>
-    <% @three_highest_sellers.each_with_index do |merchant, index| %>
-      <div>#<%= index+1 %> <%= merchant.name %></div>
+      </div>
     <% end %>
   </div>
-   <div class="item-info">Best Selling Items: <br>
-    <% @three_highest_selling_items.each_with_index do |item, index| %>
-      <div>#<%= index+1 %> <%= item.name %></div>
-    <% end %>
+  <h2 id="leaderboard-title">Leaderboard</h2>
+  <div id="stats-block">
+    <div class="item-info">Top Shoppers: <br>
+      <% @three_highest_sellers.each_with_index do |merchant, index| %>
+        <div>#<%= index+1 %> <%= merchant.name %></div>
+      <% end %>
+    </div>
+    <div class="item-info">Best Selling Items: <br>
+      <% @three_highest_selling_items.each_with_index do |item, index| %>
+        <div>#<%= index+1 %> <%= item.name %></div>
+      <% end %>
+    </div>
+    <div class="item-info">Fastest fulfilled:</div>
+    <div class="item-info">Slowest Shippers:</div>
   </div>
-  <div class="item-info">Fastest fulfilled:</div>
-  <div class="item-info">Slowest Shippers:</div>
-</div>
+</main>
