--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,1 +1,11 @@
 
+<div class="carousel-container">
+  <div class="carousel">
+    <img class="carousel-image initial" src="assets/starry_night_camping.jpg">
+    <img class="carousel-image" src="assets/baby_yoda.jpg">
+    <img class="carousel-image" src="assets/coffee_maker.jpg">
+    <img class="carousel-image" src="assets/gaming_computer.jpg">
+    <div id="next-bttn" class="carousel-next-button"></div>
+    <div id="prev-bttn" class="carousel-prev-button"></div>
+  </div>
+</div>
