--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -100,8 +100,9 @@ li {
 .welcome-user {
   color: white;
   text-align: left;
-  padding: 20px 0px 20px 20px;
+  padding: 20px 0px 20px 30px;
   background-color: black;
+  white-space: nowrap;
 }
 
 .lower-nav {
