--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,13 +20,15 @@
         <%= link_to "Merchants", merchants_path, class: "link", id: "browse-merchants-link" %>
         <%= link_to "All Items", items_path, class: "link", id: "browse-items-link" %>
         <% if current_admin? && !current_user.nil?%>
-        <%= link_to "All Users", admin_users_path, class: "link", id: "all-users-link" %>
+          <%= link_to "All Users", admin_users_path, class: "link", id: "all-users-link" %>
         <% end %>
       </nav>
     </section>
     <h1 class="welcome-header">Little Shop</h1>
-    <input class="item-nav-search" type="text">
-    <input class="nav-search-button" type="button">
+    <%= form_tag(search_path, method: 'get', class: 'head-search-form') do %>
+      <%= search_field_tag :search, params[:search], placeholder: '', class: 'item-nav-search' %>
+      <%= button_tag "", id: 'nav-search-bttn', class: 'nav-search-button', name: nil%>
+    <% end %>
     <span class="user-links">
       <% if current_user.nil? %>
         <%= link_to "Log In", login_path, class: "link login-link" %>
