--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -7,16 +7,22 @@ header {
   height: 90px;
 }
 
-.item-nav-search {
-  height: 40px;
-  width: 40%;
+.head-search-form {
+  width: 100%;
   min-width: 300px;
   max-width: 700px;
+  white-space: nowrap;
+}
+
+.item-nav-search {
+  height: 40px;
+  width: 85%;
   margin: 40px 3%;
   font-size: 1.2em;
   padding: 7px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
+  outline: none;
 }
 
 .nav-search-button {
@@ -31,8 +37,9 @@ header {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   position: relative;
-  top: 32px;
-  right: 70px;
+  top: 10px;
+  right: 60px;
+  outline: none;
 }
 
 .nav-search-button:hover {
@@ -69,7 +76,7 @@ header {
 }
 
 .welcome-header {
-  margin: 20px 0px 20px 120px;
+  margin: 20px 20px 20px 120px;
   font-size: 3.5em;
   color: black;
   filter: opacity(.9);
