--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,21 +1,21 @@
-<main class="main-container">
-  <h1 id="item-head">
-    <%= @item.name %>
-  </h1>
-  <div id="seller-info">
-    Brought to you by <%= link_to "#{@seller.name.upcase}", "#", id: "seller-name" %>
-  </div>
-  <div id="inventory-info">
-    In Stock: <%= @item.inventory_count %>
-  </div>
-  <div id="price-tag">
-    <%= number_to_currency(@item.price) %>
-  </div>
-  <div id="add-link-wrapper">
-    <%= link_to "ADD TO CART", cart_path(@item, item_id: @item.id), method: :post, id: "add-link" %>
-  </div>
-  <img src="<%= @item.img_url %>" class="item-big-image" alt="<%= @item.name %>-image">
-  <div id="description-text">
-    <%= @item.description %>
-  </div>
+<main class="item-show main-container">
+  <section class="item-image">
+    <img src="<%= @item.img_url %>" class="item-big-image" alt="<%= @item.name %>-image">
+  </section>
+  <section class="right-col-text">
+    <h1 class="item-head"> <%= @item.name %> </h1>
+    <p class="item-text">
+      Brought to you by <%= link_to "#{@seller.name.upcase}", "#", class: "seller-name" %>
+    </p>
+    <p class="item-text">
+      In Stock: <%= @item.inventory_count %>
+    </p>
+    <p class="item-text">
+      <%= number_to_currency(@item.price) %>
+    </p>
+    <p class="item-description">
+      <%= @item.description %>
+    </p>
+    <%= link_to "ADD TO CART", cart_path(@item, item_id: @item.id), method: :post, class: "add-link" %>
+  </section>
 </main>
