Only apply carousel javascript if on a page with the carousel

--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="carousel-container">
+<div id="carousel-cont" class="carousel-container">
   <div class="carousel">
     <img class="carousel-image initial" src="assets/gaming_computer.jpg">
     <img class="carousel-image" src="assets/starry_night_camping.jpg">
