--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,6 @@
-<main class="main-container">
+<main class="main-container items-index">
   <div class="cart">
-    <h1 class="page-title">Your Shopping Cart</h1>
+    <h1 class="cart-title">Your Shopping Cart</h1>
     <% if @cart.count_all == 0 %>
       <p>You have no items in your cart</p>
     <% elsif @cart.items %>
